--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title> Just Hungarian Things </title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div id="app"></div>
