Adds redux form

--- a/client/index.html
+++ b/client/index.html
@@ -7,5 +7,7 @@
 <body>
   <div id="app"></div>
   <script type="text/javascript" src="/dist/bundle.js"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBNO5JMZlcsxO8jZN4aUIDhRbPOUpl4hc&libraries=places"></script> -->
+
 </body>
 </html>
